--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tap-room-project",
+  "name": "tap-room",
   "version": "1.0.0",
-  "description": "A tap room app to browse, add and keep track of kegs",
+  "description": "A tap room app used to browse, add, and update kegs",
   "main": "index.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,7 +9,7 @@
     "lint": "eslint src/** src/**/**; exit 0",
     "lint-fix": "eslint src/** src/**/** --fix; exit 0"
   },
-  "author": "loewy malkovich",
+  "author": "Brendon Tse",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.24.1",
